--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "rxjs": "~6.2.0",
     "ts-loader": "^4.5.0",
     "webpack": "^4.29.6",
-    "webpack-dev-server": "^2.9.7",
+    "webpack-dev-server": "3.1.11",
     "webpack-node-externals": "^1.7.2",
     "zone.js": "~0.8.26"
   },
